--- a/clipper.cabal
+++ b/clipper.cabal
@@ -11,7 +11,13 @@ Copyright:           (c) Chetan Taralekar 2011, 2012
 Category:            Algebra
 
 Build-type:          Simple
--- Extra-source-files:  
+Extra-source-files:  README
+                     cbits/clipper.hpp
+                     cbits/clipper.cpp
+                     cbits/clipper_c.hpp
+                     cbits/clipper_c.cpp
+                     cbits/README
+                     cbits/License.txt
 Cabal-version:       >=1.2
 Library
   -- Modules exported by the library.
