--- a/clipper.cabal
+++ b/clipper.cabal
@@ -14,20 +14,16 @@ Build-type:          Simple
 Extra-source-files:  README
                      cbits/clipper.hpp
                      cbits/clipper.cpp
-                     cbits/clipper_c.hpp
-                     cbits/clipper_c.cpp
                      cbits/README
                      cbits/License.txt
 Cabal-version:       >=1.2
 Library
-  -- Modules exported by the library.
-  -- Exposed-modules:     
+  Exposed-modules:   Algebra.Clipper
   
-  -- Packages needed in order to build this package.
-  -- Build-depends:       
+  Build-depends:     base >= 4
   
   -- Modules not exported by this package.
   -- Other-modules:       
   
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
-  -- Build-tools:         
+  Build-tools:       hsc2hs
