--- a/clipper.cabal
+++ b/clipper.cabal
@@ -27,3 +27,6 @@ Library
   
   -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
   Build-tools:       hsc2hs
+  Include-dirs:      cbits
+  C-sources:          cbits/clipper.cpp
+  Extra-libraries:   stdc++
